# TPFA-ResSim

./: LICENSE  README.md  pyproject.toml  simulator.py
.github/workflows/: docs.yml  test_via_poetry.yml  tests.yml
TPFA_ResSim/: README.md  __init__.py  grid.py  plotting.py
matlab_codes/: GenA.m  NewtRaph.m  Pres.m  RelPerm.m  TPFA.m  Upstream.m  listing11.m  listing9.m
simulator/: __init__.py  grid.py
tests/: fig6.py  test_fig1.py  test_fig6.py
